hot fix #20 add scrollbar to queue and history
use 70vh as height, or 30em if not support

--- a/public/main.css
+++ b/public/main.css
@@ -124,3 +124,9 @@
  line-height: 1.5em;
  max-height: 3em;
 }
+#queue, #history {
+  margin-top: 2em;
+  height: 30em;
+  height: 60vh;
+  overflow: auto;
+}
